# creditcoin-legacy-consensus-rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  container.yml
src/: engine.rs  lib.rs  main.rs  work.rs
src/block/: block_ancestors.rs  block_consensus.rs  block_header.rs  block_printer.rs  mod.rs  paired_fork.rs
src/futures/: event_result.rs  mod.rs  publish_future.rs  update_stream.rs
src/miner/: answer.rs  challenge.rs  error.rs  miner.rs  mod.rs  worker.rs
src/node/: config.rs  event_result.rs  guard.rs  mod.rs  node.rs  service.rs  state.rs
src/primitives/: mod.rs  publishing_flag.rs
