[package]
name = "ccconsensus"
version = "0.1.0"
authors = [
  "Gluwa Inc.",
  "Vladimir Kuznetsov <vladimir.kouznetsov@gluwa.com>",
  "Devin Turner <devin.turner@gluwa.com>",
]
edition = "2018"

[[bin]]
name = "ccconsensus"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.4"
chrono = "0.4.11"
clap = "2.33.1"
crossbeam-channel = "0.5.1"
fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.8"
rand = "0.8.4"
#TODO: update package
sawtooth-sdk = { package = "sawtooth-sdk-creditcoin", version = "0.5.1", git = "https://github.com/gluwa/Sawtooth-SDK-Rust.git", branch = "CRB-42" }
sha2 = "0.9.0"
futures = "0.3.16"
tokio = { version = "1.10.1", features = ["full"] }

[dev-dependencies]
mockall = "*"
mockall_double = "*"
